compiler-core/src/nix/tests/snapshots/glistix_core__nix__tests__case__assignment.snap
---
source: compiler-core/src/nix/tests/case.rs
expression: "\nfn go(x) {\n  let y = case x {\n    True -> 1\n    _ -> 0\n  }\n  y\n}\n"
---
let go = x: let y = if x then 1 else 0; in y; in { }
