compiler-core/src/nix/tests/snapshots/glistix_core__nix__tests__case__called_case.snap
---
source: compiler-core/src/nix/tests/case.rs
expression: "\nfn go(x, y) {\n  case x {\n    0 -> y\n    _ -> y\n  }()\n}\n"
---
let go = x: y: (if x == 0 then y else y) { }; in { }
