compiler-core/src/nix/tests/snapshots/glistix_core__nix__tests__case__following_todo.snap
---
source: compiler-core/src/nix/tests/case.rs
expression: "\nfn go(x) {\n  case x {\n    True -> todo\n    _ -> 1\n  }\n}\n"
snapshot_kind: text
---
let
  inherit (builtins.import ./../gleam.nix) makeError;
  
  go =
    x:
    if x then
      builtins.throw
        (makeError
          "todo"
          "my/mod"
          4
          "go"
          "`todo` expression evaluated. This code has not yet been implemented."
          { })
    else 1;
in
{ }
