compiler-core/src/nix/tests/snapshots/glistix_core__nix__tests__case__multi_subject_catch_all.snap
---
source: compiler-core/src/nix/tests/case.rs
expression: "\nfn go(x, y) {\n  case x, y {\n    True, True -> 1\n    _, _ -> 0\n  }\n}\n"
snapshot_kind: text
---
----- SOURCE CODE

fn go(x, y) {
  case x, y {
    True, True -> 1
    _, _ -> 0
  }
}


----- COMPILED NIX
let go = x: y: if x && y then 1 else 0; in { }
