compiler-core/src/nix/tests/snapshots/glistix_core__nix__tests__case__multi_subject_no_catch_all.snap
---
source: compiler-core/src/nix/tests/case.rs
expression: "\nfn go(x, y) {\n  case x, y {\n    True, _ -> 1\n    _, True -> 2\n    False, False -> 0\n  }\n}\n"
---
let go = x: y: if x then 1 else if y then 2 else 0; in {}
