compiler-core/src/nix/tests/snapshots/glistix_core__nix__tests__case__multi_subject_or.snap
---
source: compiler-core/src/nix/tests/case.rs
expression: "\nfn go(x, y) {\n  case x, y {\n    True, _ | _, True -> 1\n    _, _ -> 0\n  }\n}\n"
snapshot_kind: text
---
----- SOURCE CODE

fn go(x, y) {
  case x, y {
    True, _ | _, True -> 1
    _, _ -> 0
  }
}


----- COMPILED NIX
let go = x: y: if x then 1 else if y then 1 else 0; in { }
